--- a/custom-styles/sign-up-form/package.json
+++ b/custom-styles/sign-up-form/package.json
@@ -15,7 +15,8 @@
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "sass-resources-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
